manage.py command and factories

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10.12"
 Django = "^5.0.6"
 django-extensions = "^3.2.3"
+factory-boy = "^3.3.0"
 
 
 [build-system]
